--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -67,28 +67,28 @@
     <h1>Laika prognoze</h1>
   </section>
 
-  <p>Prognoze atjaunota: 12.06.2023. 18:00<br>
-  Prognoze derīga: 12.06.2023. 18:00 - 13.06.2023. 18:00</p>
+  <p>Prognoze atjaunota: 13.06.2023. 18:00<br>
+  Prognoze derīga: 13.06.2023. 18:00 - 14.06.2023. 18:00</p>
 
   <section class="MeteoLatvia_StormMap">
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-7.failiem.lv/down.php?i=s6dwhd9r9&view">
+      <img src="https://fv9-5.failiem.lv/down.php?i=sm6wwfv2j&view">
       <p>Nakts:<br>
-        🌗Pārsvarā skaidrs, tikai dienvidos vairāk mākoņu.<br>
-        🌡Gaisa temperatūra ap +4°C...+9°C, piekrastē ne vēsāks par +10°C...+12°C<br>
-        💨Pūtīs lēns austrumu puses vējš ar ātrumu 1-2 m/s.</p>
+🌘Mainīgs mākoņu daudzums, bez nokrišņiem.<br>
+🌡️Gaisa temperatūra ap +7°C...+10°C. Piekrastē nebūs vēsāks par +11°C...+12°C.<br>
+💨Pūtīs lēns ziemeļaustrumu puses vējš ar ātrumu 1-3 m/s, brīžiem arī bezvējš.</p>
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-4.failiem.lv/down.php?i=dfe9udbey&view">
+      <img src="https://fv9-2.failiem.lv/down.php?i=u782mbzaw&view">
       <p>Diena:<br>
-        ☀ Dienas pirmajā pusē laiks būs skaidrs un saulains, bet dienas laikā no dienvidiem mākoņu daudzums palielināsies, taču nokrišņi nav gaidāmi.<br>
-        🌡Gaisa temperatūra ap +23°C...+26°C, piekrastē vēsāks - ap +19°C...+20°C<br>
-        💨 Lēns līdz mēreni stiprs ziemeļu puses vējš ar ātrumu 2-5 m/s, piekrastes rajonos brāzmas līdz 8-10 m/s.</p>
+☀️Parsvarā saulains, taču dienas gaitā debesīs parādīsies arī mākoņi, kas gan nokrišņus nenesīs.<br>
+🌡️Gaisa temperatūra ap +24°C...+28°C. Piekrastē nedaudz vēsāks - ap +20°C...+22°C.<br>
+💨 Pūtīs lēns ziemeļu puses vējš ar ātrumu 3-6 m/s. Pēcpusdienā piekrastē kļūs mērens līdz 6-9 m/s.</p>
     </div>
 
     <script>
