--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -74,21 +74,21 @@
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-5.failiem.lv/down.php?i=sm6wwfv2j&view">
+      <img src="https://fv9-4.failiem.lv/down.php?i=zvhhb239d&view">
       <p>Nakts:<br>
-🌘Mainīgs mākoņu daudzums, bez nokrišņiem.<br>
-🌡️Gaisa temperatūra ap +7°C...+10°C. Piekrastē nebūs vēsāks par +11°C...+12°C.<br>
-💨Pūtīs lēns ziemeļaustrumu puses vējš ar ātrumu 1-3 m/s, brīžiem arī bezvējš.</p>
+🌘Mainīgs mākoņu daudzums, Kurzemes dienvidos pastāv neliela lietus iespējamība, bet pārējā valstī bez nokrišņiem.<br>
+🌡️Gaisa temperatūra nebūs zemāka par +10°C...+13°C, savukārt piekrastes rajonos nebūs vēsāks par +14°C...+15°C.<br>
+💨Pūtīs lēns, mainīga virziena vējš ar ātrumu 1-3 m/s, brīžiem arī bezvējš.</p>
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-2.failiem.lv/down.php?i=u782mbzaw&view">
+      <img src="https://fv9-2.failiem.lv/down.php?i=k3dp33det&view">
       <p>Diena:<br>
-☀️Parsvarā saulains, taču dienas gaitā debesīs parādīsies arī mākoņi, kas gan nokrišņus nenesīs.<br>
-🌡️Gaisa temperatūra ap +24°C...+28°C. Piekrastē nedaudz vēsāks - ap +20°C...+22°C.<br>
-💨 Pūtīs lēns ziemeļu puses vējš ar ātrumu 3-6 m/s. Pēcpusdienā piekrastē kļūs mērens līdz 6-9 m/s.</p>
+☀️Parsvarā saulains, pēcpusdienā mākoņu kļūs vairāk. Pievakarē, Kurzemes dienvidrietumos gaidāmas pērkona lietusgāzes.<br>
+🌡️Gaisa temperatūra ap +26°C...+29°C, pastāv neliela iespējamība, ka vietām gaiss sakarsīs līdz +30°C. Piekrastē nedaudz vēsāks - ap +22°C...+24°C.<br>
+💨 Pūtīs lēns ziemeļaustrumu puses vējš ar ātrumu 4-7 m/s. Kurzemes dienvidrietumos, vakarā, negaisā laikā brāzmas līdz 10-15 m/s.</p>
     </div>
 
     <script>
