--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -82,23 +82,23 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv9-2.failiem.lv/down.php?i=vzv6vnqkj&view">
-    <img src="https://fv9-6.failiem.lv/down.php?i=q8m3gk4gb&view">
+    <img src="https://fv9-6.failiem.lv/down.php?i=v333859qk&view">
+    <img src="https://fv9-5.failiem.lv/down.php?i=wjqaewynn&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 13.06.2023. 23:59 līdz 14.06.2023. 23:59<br>
-        Izplatīta: 13.06.2023. 18:00<br><br><br>
+        Derīga: no 14.06.2023. 23:59 līdz 15.06.2023. 23:59<br>
+        Izplatīta: 14.06.2023. 18:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        Virs mūsu reģiona dominē plaša un spēcīga anticiklona centrālā daļa, kas nosaka to, ka laiks mūsu reģionā ir sauss un saulains. Mūsu apkārtnē nav novērojami pat atsevišķi gubu mākoņi, nemaz nerunājot par negaisiem.
+        Virs mūsu reģiona dominē plašs anticiklons, taču no Centrāleiropas (Polijas reģiona) pietuvojas neliels, pazemināta atmosfēras spiediena apgabals. Līdz ar to rītdienas gaitā, mūsu reģionā no dienvidiem ieplūdīs mitrāka gaisa masa, ar lielāku enerģijas daudzumu negaisiem. Vairums skaitlisko modeļu prognozē, ka virs Lietuvas rietumu un centrālās daļas, vēlā pēcpusdienā akktīvi veidosies negaisa mākoņi, kas vēlāk vakarā var organizēties atsevišķās daudšūnu grupās, taču modeļos nav pārliecības par situācijas attīstību vēlāk vakarā.
         <br><br><br>
 
 
         DISKUSIJA<br><br><br>
-     Iepriekš minēto iemeslu dēļ, mūsu reģionā negaisi nav novērojami. Bīstami negaisi netiek prognozēti un kopējā pērkona negaisu iespējamība visā valstī ir zem 1%.
+     Rīta pusē un vēl dienas pirmajā pusē virs prognozēto negaisu attīstības reģiona būs padaudz mākoņu, kas kavēs konvektīvos procesus, taču dienas laikā gaisam iekarstot, arī mākoņi izklīdīs un sāksies aktīva piezemes slāņa uzkaršana. Negaisu agrīnās veidošanās reģions būs Lietuvas dienvidrietumu daļa, kurā jau no agrām rīta stundām CAPE vērtības būs ap 400-600 J/kg, taču izklīstot mākoņiem un sākoties uzkaršanai, CAPE vērtības strauji palielināsies un ap 13:00-15:00 jau sasniegs 1000-1200 J/kg. Sākotnēji negaisi attīstīsies kā atsevišķas, izolētas šūnas, taču modeļi uzrāda, ka vēlāk pēcpusdienā, vējgriezes spēks pieņemsies līdz 8-12 ms, kas mazinās negaisu aukstās izplūdes viļņu negatīvo ietekmi uz to attīstību, un ļaus tiem organizēties atsevišķās, lielākās grupās. Līdz ar šo organizēšanos negaisi virzīsies uz ziemeļrietumiem. Ap 15:00-18:00 Kurzemes dienvidrietmus var sasniegt pirmās negaisa mākoņu šūnas, taču tās vēl būs salīdzinoši vājākas. Modeļos uzrādās scenārijs, ka daudzšūnu negaisu grupas, vēlāk vakarā gaitā, īslaicīgi var organizēties arī nelielās lineāras konvektīvās sistēmās. Šādā gadījumā laikā no 19:00 līdz 23:00 pastāv augsts risks, ka Kurzemes dienvidrietumus no Lietuvas sasniegs plašākas pērkona lietusgāzes ar brāzmainu vēju līdz 10-15 m/s. Pateicoties paaugstinātai vējgriezei (ap 8-12 m/s), pastāv arī paaugstināts krusas risks. Līdz pusnaktij negaisu aktivitāte jau būs norimusi.
       </p>
     </div>
 
