--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -82,23 +82,23 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv9-6.failiem.lv/down.php?i=v333859qk&view">
-    <img src="https://fv9-5.failiem.lv/down.php?i=wjqaewynn&view">
+    <img src="https://fv9-6.failiem.lv/down.php?i=nec6esvyp&view">
+    <img src="https://fv9-7.failiem.lv/down.php?i=mb529jyww&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 14.06.2023. 23:59 līdz 15.06.2023. 23:59<br>
-        Izplatīta: 14.06.2023. 18:00<br><br><br>
+        Derīga: no 15.06.2023. 23:59 līdz 16.06.2023. 23:59<br>
+        Izplatīta: 15.06.2023. 18:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        Virs mūsu reģiona dominē plašs anticiklons, taču no Centrāleiropas (Polijas reģiona) pietuvojas neliels, pazemināta atmosfēras spiediena apgabals. Līdz ar to rītdienas gaitā, mūsu reģionā no dienvidiem ieplūdīs mitrāka gaisa masa, ar lielāku enerģijas daudzumu negaisiem. Vairums skaitlisko modeļu prognozē, ka virs Lietuvas rietumu un centrālās daļas, vēlā pēcpusdienā akktīvi veidosies negaisa mākoņi, kas vēlāk vakarā var organizēties atsevišķās daudšūnu grupās, taču modeļos nav pārliecības par situācijas attīstību vēlāk vakarā.
+        No Centrāleiropas (Polijas reģiona) pietuvojas neliels, pazemināta atmosfēras spiediena apgabals. Ja vēl naktī lokāli gubu mākoņi ar lietusgāzēm un pērkona negaisu iespējami Kurzemes dienvidrietumos, tad rītdienas gaitā, turpinoties karstumam un mūsu reģionā no dienvidiem turpinot ieplūst arvien mitrākai gaisa masai, ar lielāku enerģijas daudzumu negaisiem, pērkona lietusgāzes veidosies jau daudzviet, bet it sevišķi Lietuvā. Gubu-negaisa mākoņu virzība būs no dienvidiem uz ziemeļiem, līdz ar to būs svarīga pirmskonvektīvā situācija Lietuvā, un kā negaisi uzvedīsies ceļā uz Latviju.
         <br><br><br>
 
 
         DISKUSIJA<br><br><br>
-     Rīta pusē un vēl dienas pirmajā pusē virs prognozēto negaisu attīstības reģiona būs padaudz mākoņu, kas kavēs konvektīvos procesus, taču dienas laikā gaisam iekarstot, arī mākoņi izklīdīs un sāksies aktīva piezemes slāņa uzkaršana. Negaisu agrīnās veidošanās reģions būs Lietuvas dienvidrietumu daļa, kurā jau no agrām rīta stundām CAPE vērtības būs ap 400-600 J/kg, taču izklīstot mākoņiem un sākoties uzkaršanai, CAPE vērtības strauji palielināsies un ap 13:00-15:00 jau sasniegs 1000-1200 J/kg. Sākotnēji negaisi attīstīsies kā atsevišķas, izolētas šūnas, taču modeļi uzrāda, ka vēlāk pēcpusdienā, vējgriezes spēks pieņemsies līdz 8-12 ms, kas mazinās negaisu aukstās izplūdes viļņu negatīvo ietekmi uz to attīstību, un ļaus tiem organizēties atsevišķās, lielākās grupās. Līdz ar šo organizēšanos negaisi virzīsies uz ziemeļrietumiem. Ap 15:00-18:00 Kurzemes dienvidrietmus var sasniegt pirmās negaisa mākoņu šūnas, taču tās vēl būs salīdzinoši vājākas. Modeļos uzrādās scenārijs, ka daudzšūnu negaisu grupas, vēlāk vakarā gaitā, īslaicīgi var organizēties arī nelielās lineāras konvektīvās sistēmās. Šādā gadījumā laikā no 19:00 līdz 23:00 pastāv augsts risks, ka Kurzemes dienvidrietumus no Lietuvas sasniegs plašākas pērkona lietusgāzes ar brāzmainu vēju līdz 10-15 m/s. Pateicoties paaugstinātai vējgriezei (ap 8-12 m/s), pastāv arī paaugstināts krusas risks. Līdz pusnaktij negaisu aktivitāte jau būs norimusi.
+     Negaisu attīstību dienas laikā, lielā mērā ietekmēs situācija tieši rīta pusē. Jaunākajos, augstas izšķirtspējas modeļu datos redzams, ka rīta pusē vēl būs salīdzinoši liels mākoņu daudzums Lietuvā un Latvijas dienvidu daļā, taču jau laikā ap 9:00-12:00 mākoņi izklīdīs un gaiss uzkarsīs līdz +26°C...+28°C. Mākoņu izklīšana arī ļaus strauji pieaugt CAPE vērtībām, kas ap 12:00-13:00, Kurzemes dienvidos, Zemgalē un Lietuvā būs ap 800-1000 J/kg, vietām līdz 1200 J/kg. Rasas punkta temperatūra būs ap +17°C...+19°C, kas lai arī nav īpaši daudz, tomēr ir pietiekams rādītājs gaisa mitrumam, ko varēs labi just, jo gaiss būs sutīgs. Labāks rādītājs kopējai gaisa masas temperatūras un mitruma noteikšānā ir Theta-E, un pēcpusdienā virs Lietuvas atradīsies 46-48 Theta-E vērtību zona, kas lēnām virzīsies arī Latvijas virzienā. (Theta-E vērtības virs 50 jau norāda uz ļoti karstu un mitru gaisa masu). Konvektīvā inicializācija prognozēs uzrādās ap 12:00-13:00, kad virs Lietuvas sāks veidoties pirmie, vienšūnu negaisa mākoņi. Nākamo dažu stundu laikā jau esošie un no jauna izveidojušies mākoņi virzīsies cauri diezgan augstu CAPE vērtību zonai, kas ļaus negaisiem saglabāt spēku, un lai arī iepriekš minētās vējgriezes vērtības būs tikai ap 10 m/s, tas var ļaut atsvišķiem vienšūnu negaisiem organizēties daudzšūnu negaisu grupās. Šādā gadījumā palielinās visi riski - krusas, spēcīgu lietusgāžu un spēcīgu vēju brāzmu. Puslīdz organizētās daudzšūnu negaisu grupas tad laikā ap 14:00-16:00 ienāks arī Latvijas teritorijā no dienvidiem (Lietuvas). Galvenais drauds no negaisiem rīt būs krusa Latvijas rietumu rajonos un spēcīgas vēja brāzmas centrālajos rajonos. Negaisu kustība būs salīdzinoši ātra, līdz ar to nepastāv spēcīgu lietusgāžu izraisītu plūdu risks, taču nav izslēgts, ka atsevišķi negaisi (it sevišķi pilsētās) atnes īslaīcīgu ielu applūšanu. Negaisi turpināsies arī vakarā, taču līdz 21:00, negaisu aktiviāte pakāpeniski norims.        
       </p>
     </div>
 
