--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -74,21 +74,21 @@
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-4.failiem.lv/down.php?i=zvhhb239d&view">
+      <img src="https://fv9-7.failiem.lv/down.php?i=hchh4yzd7&view">
       <p>Nakts:<br>
-🌘Mainīgs mākoņu daudzums, Kurzemes dienvidos pastāv neliela lietus iespējamība, bet pārējā valstī bez nokrišņiem.<br>
-🌡️Gaisa temperatūra nebūs zemāka par +10°C...+13°C, savukārt piekrastes rajonos nebūs vēsāks par +14°C...+15°C.<br>
-💨Pūtīs lēns, mainīga virziena vējš ar ātrumu 1-3 m/s, brīžiem arī bezvējš.</p>
+🌘Mainīgs mākoņu daudzums, Kurzemes dienvidrietumos nakts sākumā pērkona lietusgāzes, kas nakts laikā mitēsies.<br>
+🌡Gaisa temperatūra nebūs zemāka par +14°C...+18°C.<br>
+💨Pūtīs lēns, ziemeļaustrumu-austrumu puses vējš ar ātrumu 2-3 m/s. Negaisa laikā, Kurzemes dienvidrietumos brāzmas līdz 10-12 m/s.
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-2.failiem.lv/down.php?i=k3dp33det&view">
+      <img src="https://fv9-3.failiem.lv/down.php?i=vshajwpax&view">
       <p>Diena:<br>
-☀️Parsvarā saulains, pēcpusdienā mākoņu kļūs vairāk. Pievakarē, Kurzemes dienvidrietumos gaidāmas pērkona lietusgāzes.<br>
-🌡️Gaisa temperatūra ap +26°C...+29°C, pastāv neliela iespējamība, ka vietām gaiss sakarsīs līdz +30°C. Piekrastē nedaudz vēsāks - ap +22°C...+24°C.<br>
-💨 Pūtīs lēns ziemeļaustrumu puses vējš ar ātrumu 4-7 m/s. Kurzemes dienvidrietumos, vakarā, negaisā laikā brāzmas līdz 10-15 m/s.</p>
+☀️Dienas pirmā puse vēl saulaina, taču dienas gaitā aktīvi veidosies gubu mākoņi, kas pēcpusdienā, rietumu un centrālajos rajonos nesīs lokālas pērkona lietusgāzes.<br>
+🌡Gaisa temperatūra ap +26°C...+29°C, pastāv neliela iespējamība, ka vietām gaiss sakarsīs līdz +30°C. Piekrastē nedaudz vēsāks - ap +20°C...+23°C. Jāpiebilst, ka gaidāms augsts gaisa mitruma līmenis, tāpēc laiks būs sutīgs.<br>
+💨 Pūtīs lēns austrumu-dienvidaustrumu puses vējš ar ātrumu 2-4 m/s. Negaisa laikā, rietumu un centrālajos rajonos brāzmas līdz 10-14 m/s.
     </div>
 
     <script>
