--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -67,28 +67,29 @@
     <h1>Laika prognoze</h1>
   </section>
 
-  <p>Prognoze atjaunota: 15.06.2023. 18:00<br>
-  Prognoze derīga: 15.06.2023. 18:00 - 16.06.2023. 18:00</p>
+  <p>Prognoze atjaunota: 16.06.2023. 18:00<br>
+  Prognoze derīga: 16.06.2023. 18:00 - 17.06.2023. 18:00</p>
 
   <section class="MeteoLatvia_StormMap">
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-7.failiem.lv/down.php?i=hchh4yzd7&view">
+      <img src="https://fv9-5.failiem.lv/down.php?i=kyt24666c&view">
       <p>Nakts:<br>
-🌘Mainīgs mākoņu daudzums, Kurzemes dienvidrietumos nakts sākumā pērkona lietusgāzes, kas nakts laikā mitēsies.<br>
-🌡Gaisa temperatūra nebūs zemāka par +14°C...+18°C.<br>
-💨Pūtīs lēns, ziemeļaustrumu-austrumu puses vējš ar ātrumu 2-3 m/s. Negaisa laikā, Kurzemes dienvidrietumos brāzmas līdz 10-12 m/s.
+🌘Mainīgs mākoņu daudzums, Kurzemes dienvidrietumos lietus, brīžiem stiprs, iespējams arī pērkons.<br>
+🌡️Gaisa temperatūra nebūs zemāka par +13°C...+18°C.<br>
+💨Pūtīs lēns, ziemeļu-ziemeļaustrumu puses vējš ar ātrumu 1-4 m/s. Negaisa laikā, Kurzemes dienvidrietumos brāzmas līdz 7-10 m/s.
+
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-3.failiem.lv/down.php?i=vshajwpax&view">
+      <img src="https://fv9-7.failiem.lv/down.php?i=xyh7jaegn&view">
       <p>Diena:<br>
-☀️Dienas pirmā puse vēl saulaina, taču dienas gaitā aktīvi veidosies gubu mākoņi, kas pēcpusdienā, rietumu un centrālajos rajonos nesīs lokālas pērkona lietusgāzes.<br>
-🌡Gaisa temperatūra ap +26°C...+29°C, pastāv neliela iespējamība, ka vietām gaiss sakarsīs līdz +30°C. Piekrastē nedaudz vēsāks - ap +20°C...+23°C. Jāpiebilst, ka gaidāms augsts gaisa mitruma līmenis, tāpēc laiks būs sutīgs.<br>
-💨 Pūtīs lēns austrumu-dienvidaustrumu puses vējš ar ātrumu 2-4 m/s. Negaisa laikā, rietumu un centrālajos rajonos brāzmas līdz 10-14 m/s.
+☀️Diena būs parsvarā mākoņaina, taču centrālajos un austrumu rajonos brīžiem var skaidroties, savukārt Kurzemē būs apmācies, gaidāms lietus, vietām arī pērkona negaiss.<br>
+🌡️Gaisa temperatūra lielākajā daļā Kurzemes tā arī nepakāpsies augstāk par +17°C...+22°C, taču centrālajos un austrumu rajonos turpināsies karstums - gaiss iekarsīs līdz +27...+29°C.<br>
+💨 Pūtīs lēns vējš ar ātrumu 2-5 m/s. Negaisa laikā brāzmas līdz 10-12 m/s.
     </div>
 
     <script>
