--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -74,22 +74,22 @@
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-5.failiem.lv/down.php?i=kyt24666c&view">
+      <img src="https://fv9-3.failiem.lv/down.php?i=kh8b6kaqd&view">
       <p>Nakts:<br>
-🌘Mainīgs mākoņu daudzums, Kurzemes dienvidrietumos lietus, brīžiem stiprs, iespējams arī pērkons.<br>
-🌡️Gaisa temperatūra nebūs zemāka par +13°C...+18°C.<br>
-💨Pūtīs lēns, ziemeļu-ziemeļaustrumu puses vējš ar ātrumu 1-4 m/s. Negaisa laikā, Kurzemes dienvidrietumos brāzmas līdz 7-10 m/s.
+🌑Mākoņains. Kurzemē gaidāms neliels lietus, brīžiem stiprs, iespējams arī pērkona negaiss.<br>
+🌡Gaisa temperatūra nebūs zemāka par +15°C...+19°C. Vietām, pārsvarā Rīgā un Vidzemē gaidāma arī tropiska nakts - gaiss neatdzisīs zemāk par +20°C<br>
+💨Pūtīs lēns vējš ar ātrumu 2-4 m/s. Negaisa laikā, brāzmas līdz 7-10 m/s.
 
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-7.failiem.lv/down.php?i=xyh7jaegn&view">
+      <img src="https://fv9-4.failiem.lv/down.php?i=rkuzpsv8t&view">
       <p>Diena:<br>
-☀️Diena būs parsvarā mākoņaina, taču centrālajos un austrumu rajonos brīžiem var skaidroties, savukārt Kurzemē būs apmācies, gaidāms lietus, vietām arī pērkona negaiss.<br>
-🌡️Gaisa temperatūra lielākajā daļā Kurzemes tā arī nepakāpsies augstāk par +17°C...+22°C, taču centrālajos un austrumu rajonos turpināsies karstums - gaiss iekarsīs līdz +27...+29°C.<br>
-💨 Pūtīs lēns vējš ar ātrumu 2-5 m/s. Negaisa laikā brāzmas līdz 10-12 m/s.
+☀️Diena būs parsvarā mākoņaina, taču brīžiem arī uzspīdēs saule. Centrālajos un austrumu rajonos lokālas pērkona lietusgāzes, iespējama arī krusa.<br>
+🌡Gaisa temperatūra rietumu rajonos tā arī nepakāpsies augstāk par +16°C...+21°C, taču centrālajos un austrumu rajonos turpināsies karstums - gaiss iekarsīs līdz +26...+28°C.<br>
+💨 Pūtīs lēns vējš ar ātrumu 3-4 m/s. Negaisa laikā brāzmas līdz 10-15 m/s.
     </div>
 
     <script>
