--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -82,23 +82,22 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv9-6.failiem.lv/down.php?i=nec6esvyp&view">
-    <img src="https://fv9-7.failiem.lv/down.php?i=mb529jyww&view">
+    <img src="https://fv9-2.failiem.lv/down.php?i=avfz9whyr&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 15.06.2023. 23:59 līdz 16.06.2023. 23:59<br>
-        Izplatīta: 15.06.2023. 18:00<br><br><br>
+        Derīga: no 17.06.2023. 23:59 līdz 18.06.2023. 23:59<br>
+        Izplatīta: 17.06.2023. 20:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        No Centrāleiropas (Polijas reģiona) pietuvojas neliels, pazemināta atmosfēras spiediena apgabals. Ja vēl naktī lokāli gubu mākoņi ar lietusgāzēm un pērkona negaisu iespējami Kurzemes dienvidrietumos, tad rītdienas gaitā, turpinoties karstumam un mūsu reģionā no dienvidiem turpinot ieplūst arvien mitrākai gaisa masai, ar lielāku enerģijas daudzumu negaisiem, pērkona lietusgāzes veidosies jau daudzviet, bet it sevišķi Lietuvā. Gubu-negaisa mākoņu virzība būs no dienvidiem uz ziemeļiem, līdz ar to būs svarīga pirmskonvektīvā situācija Lietuvā, un kā negaisi uzvedīsies ceļā uz Latviju.
+        Pēdējo 2 dienu laikā, gar rietumiem virzās neliela un neaktīva ciklona centrālā daļa. Vakar ar šo veidojumu saistīta konverģences zona, Kurzemē atnesa pērkona lietusgāzes. Šodien Kurzemi sasniedza stacionāra, frontāla sistēma, kas dienas laikā nesa apmākušās debesis un ilgstošu lietu. Rīt no dienvidiem mūs sasniegs aktīvāks, stacionāras frontes veidojumus un blakus tai arī atradīsies konverģences zona, un šie abi faktori būs galvenie iemesli negaisiem rīt.
         <br><br><br>
 
 
         DISKUSIJA<br><br><br>
-     Negaisu attīstību dienas laikā, lielā mērā ietekmēs situācija tieši rīta pusē. Jaunākajos, augstas izšķirtspējas modeļu datos redzams, ka rīta pusē vēl būs salīdzinoši liels mākoņu daudzums Lietuvā un Latvijas dienvidu daļā, taču jau laikā ap 9:00-12:00 mākoņi izklīdīs un gaiss uzkarsīs līdz +26°C...+28°C. Mākoņu izklīšana arī ļaus strauji pieaugt CAPE vērtībām, kas ap 12:00-13:00, Kurzemes dienvidos, Zemgalē un Lietuvā būs ap 800-1000 J/kg, vietām līdz 1200 J/kg. Rasas punkta temperatūra būs ap +17°C...+19°C, kas lai arī nav īpaši daudz, tomēr ir pietiekams rādītājs gaisa mitrumam, ko varēs labi just, jo gaiss būs sutīgs. Labāks rādītājs kopējai gaisa masas temperatūras un mitruma noteikšānā ir Theta-E, un pēcpusdienā virs Lietuvas atradīsies 46-48 Theta-E vērtību zona, kas lēnām virzīsies arī Latvijas virzienā. (Theta-E vērtības virs 50 jau norāda uz ļoti karstu un mitru gaisa masu). Konvektīvā inicializācija prognozēs uzrādās ap 12:00-13:00, kad virs Lietuvas sāks veidoties pirmie, vienšūnu negaisa mākoņi. Nākamo dažu stundu laikā jau esošie un no jauna izveidojušies mākoņi virzīsies cauri diezgan augstu CAPE vērtību zonai, kas ļaus negaisiem saglabāt spēku, un lai arī iepriekš minētās vējgriezes vērtības būs tikai ap 10 m/s, tas var ļaut atsvišķiem vienšūnu negaisiem organizēties daudzšūnu negaisu grupās. Šādā gadījumā palielinās visi riski - krusas, spēcīgu lietusgāžu un spēcīgu vēju brāzmu. Puslīdz organizētās daudzšūnu negaisu grupas tad laikā ap 14:00-16:00 ienāks arī Latvijas teritorijā no dienvidiem (Lietuvas). Galvenais drauds no negaisiem rīt būs krusa Latvijas rietumu rajonos un spēcīgas vēja brāzmas centrālajos rajonos. Negaisu kustība būs salīdzinoši ātra, līdz ar to nepastāv spēcīgu lietusgāžu izraisītu plūdu risks, taču nav izslēgts, ka atsevišķi negaisi (it sevišķi pilsētās) atnes īslaīcīgu ielu applūšanu. Negaisi turpināsies arī vakarā, taču līdz 21:00, negaisu aktiviāte pakāpeniski norims.        
+         Rīts iesāksies mākoņains, un visticamāk pilnībā apmācies, taču no dienvidiem turpinās ieplūst ļoti silta un ļoti mitra gaisa masa. Rīta stundās CAPE vertības vēl būs ap 200-300 J/kg, taču ap 12:00, tās jau būs sasniegušas 700-900 J/jkg. Pēc jaunākajām, augstas izšķirtspējas modeļu prognozēm, aktivitāte (konvektīvā inicializācija) sāksies ap 13:00-14:00, un ap to laiku, joslā no Kurzemes ziemeļaustrumiem cauri valsts centrālajai daļai uz Lietuvu jau stiepsies visaugstākā CAPE vērtību zona - ap 1000-1200 J/kg. Šajā laikā virs mums jau atradīsies arī augsta Theta-E vērtību zona, ap 48-52°C. Šī apstākļu kombinācija ļaus veidoties negaisiem, un negaisu veidošanos vēl vairāk pastiprinās konverģences zonas esamība tieši augstāko CAPE vērtību zonā. Vējgrieze nebūs pārāk liela - tikai ap 5-8 m/s, līdz ar to negaisu organizāija būs limitēta, taču 2.līmeņa zona izsludināta, jo pastāv risks, ka negaisi būs mazkustīgi, līdz ar to nesīs ļoti lielu nokrišņu daudzumu, un šajā zonā arī pastāv vislielākais krusas risks. 1. un 0. līmeņa zonā arī gaidāmi negaisi, un nav izslēgts, ka no atsevišķa negaisa mākoņa tiek novērota arī krusa, taču galvenais riska intereses reģions ir centrālie rajoni.
       </p>
     </div>
 
