--- a/MeteoNegaisi.html
+++ b/MeteoNegaisi.html
@@ -82,22 +82,22 @@
   </section>
 
   <section class="MeteoLatvia_StormMap">
-    <img src="https://fv9-2.failiem.lv/down.php?i=avfz9whyr&view">
+    <img src="https://fv9-2.failiem.lv/down.php?i=79fhgdwej&view">
 
     <button class="collapsible">Prognozes izklāsts</button>
     <div class="thunderstorm-outlook">
       <p>Bīstamu negaisu prognoze<br>
-        Derīga: no 17.06.2023. 23:59 līdz 18.06.2023. 23:59<br>
-        Izplatīta: 17.06.2023. 20:00<br><br><br>
+        Derīga: no 18.06.2023. 23:59 līdz 19.06.2023. 23:59<br>
+        Izplatīta: 18.06.2023. 23:00<br><br><br>
 
 
         SITUĀCIJAS APRAKSTS<br><br><br>
-        Pēdējo 2 dienu laikā, gar rietumiem virzās neliela un neaktīva ciklona centrālā daļa. Vakar ar šo veidojumu saistīta konverģences zona, Kurzemē atnesa pērkona lietusgāzes. Šodien Kurzemi sasniedza stacionāra, frontāla sistēma, kas dienas laikā nesa apmākušās debesis un ilgstošu lietu. Rīt no dienvidiem mūs sasniegs aktīvāks, stacionāras frontes veidojumus un blakus tai arī atradīsies konverģences zona, un šie abi faktori būs galvenie iemesli negaisiem rīt.
+        Jau šodien virs centrālajiem rajoniem uz Lietuvu bija izvietota konverģences zona, uz kuras veidojās pērkona lietusgāzes. Lielākā aktivitāte gan saglabājās Lietuvā, jo tur arī tika novērotas augstākās CAPE vērtības. Nākamajā diennaktī koverģences zona virzīsies un rīt dienā atradīsies šķēršām pāri Latvijai - no ziemeļrietumiem uz dienvidaustrumiem. Šī konverģences zona būs galvenais negaisu ierosinātājs.
         <br><br><br>
 
 
         DISKUSIJA<br><br><br>
-         Rīts iesāksies mākoņains, un visticamāk pilnībā apmācies, taču no dienvidiem turpinās ieplūst ļoti silta un ļoti mitra gaisa masa. Rīta stundās CAPE vertības vēl būs ap 200-300 J/kg, taču ap 12:00, tās jau būs sasniegušas 700-900 J/jkg. Pēc jaunākajām, augstas izšķirtspējas modeļu prognozēm, aktivitāte (konvektīvā inicializācija) sāksies ap 13:00-14:00, un ap to laiku, joslā no Kurzemes ziemeļaustrumiem cauri valsts centrālajai daļai uz Lietuvu jau stiepsies visaugstākā CAPE vērtību zona - ap 1000-1200 J/kg. Šajā laikā virs mums jau atradīsies arī augsta Theta-E vērtību zona, ap 48-52°C. Šī apstākļu kombinācija ļaus veidoties negaisiem, un negaisu veidošanos vēl vairāk pastiprinās konverģences zonas esamība tieši augstāko CAPE vērtību zonā. Vējgrieze nebūs pārāk liela - tikai ap 5-8 m/s, līdz ar to negaisu organizāija būs limitēta, taču 2.līmeņa zona izsludināta, jo pastāv risks, ka negaisi būs mazkustīgi, līdz ar to nesīs ļoti lielu nokrišņu daudzumu, un šajā zonā arī pastāv vislielākais krusas risks. 1. un 0. līmeņa zonā arī gaidāmi negaisi, un nav izslēgts, ka no atsevišķa negaisa mākoņa tiek novērota arī krusa, taču galvenais riska intereses reģions ir centrālie rajoni.
+        Līdzīgi, kā iepriekšējie rīti, arī nākamais rīts iesāksies mākoņains, taču jaunākās SwissD 4x4 modeļu prognozes uzrāda, ka mākoņu nebūs tik daudz kā šorīt. Iespējams tas bija iemesls, kādēļ šodien tā arī neizveidojās pietiekami stipri negaisi. Mazāk mākoņu ļaus arī straujāk pieaugt CAPE vērtībām, kas ir galvenā negaisu "degviela". Jau ap pusdienlaiku CAPE vērtības daudzviet valsts dienvidu rajonos būs ap 700-900 J/kg, taču ap 13:00-14:00, it sevišķi 2.līmeņa zonā jau būs 1000-1400 J/kg. Arī Theta-E vērtības sasniegs 48-52°C, kas norāda uz ļoti siltu un ļoti mitru gaisu. Gaisa temperatūra dienas laikā sasniegs +25°C...+29°C, bet rasas punkta temperatūra būs ap +19°C...+20°C, kas nozīmē ka gaiss būs ne vien ļoti sutīgs, bet arī ar ļoti augstu mitruma daudzumu, kas ir otrā svarīgākā komponente negaisu attīstībā. 0. un 1. līmeņa zonā esošie negaisi būs mazāk organizēti, taču modeļiem joprojām nav skaidrības par konverģences zonas izvietojumu, līdz ar to vēl ļoti variē potenciālo negaisu inicializācijas vieta, taču analizējot kopējo ainu, tā būs josla no Kurzemes cauri Zemgalei un Sēlijai uz Latgali, tāpēc šī zona arī iekļauta 2.līmeņa riska zonā. Galvenais drauds, kādēļ nolēmu izplatīt 2.līmeni ir fakts, ka negaisi būs salīdzinoši mazkustīgi, pie tam SwissHD 4x4, ICON-EU un ECMWF modeļi ir vienprātīgi, ka uz konverģences zonas izveidosies pat samērā organizēta josla ar negaisiem, un papildus vējgriezes vērtības ap 7-10 m/s ļaus negaisiem vēl vairāk organizēties grupā/joslās, palielinot īpaši lielu nokrišņu daudzuma risku no lietusgāzēm. Tāpat 2.līmeņa zonas lēmums tika pieņemts, jo pastāv ievērojami augstāks krusas risks, nekā citos reģionos, kuros tāpat gaidāmi negaisi, taču ar mazāku organizētību un intensitāti. Negaisi pēcpusdienas un pievakares laikā kļūs plašāki, taču līdz vakaram lēnām sāks zaudēt spēku, lai gan atsevišķas prognozes no SwissHD 4x4 un ECMWF piedāvā scenāriju, ka atsevišķi negaisi var turpināties arī nakts pirmajā pusē. Šāda situācijas (kad atsevišķi negaisi turpinās arī naktī) ir novērotas gan vakar, gan šodien, kas palielina scenārija ticamību. 
       </p>
     </div>
 
