--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -74,22 +74,22 @@
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
       <h1>Nakts</h1>
-      <img src="https://fv9-6.failiem.lv/down.php?i=q377583tq&view">
+      <img src="https://fv9-6.failiem.lv/down.php?i=p8pyftxz5&view">
       <p>Nakts:<br>
-🌑Mākoņains, austrumu rajonos brīžiem skaidrosies, taču rietumu rajonos gaidāms īslaīcīgs lietus, iespējams arī pērkons.<br>
-🌡️Gaisa temperatūra nebūs zemāka par +15°C...+19°C, turklāt vietām nakts būs arī tropiska - gaisa temperatūra nepazemināsies zem +20°C.<br>
-💨Pūtīs lēns ziemeļaustrumu-austrumu puses vējš ar ātrumu 3-5 m/s.
+🌒Neliels mākoņu daudzums, taču vietām atsevišķi gubu mākoņi var atnest īslaicīgu lietu.<br>
+🌡Gaisa temperatūra ap +14°C...+19°C.<br>
+💨Pūtīs lēns vējš ar ātrumu 1-3 m/s, taču daudzviet būs arī bezvējš
 
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
       <h1>Diena</h1>
-      <img src="https://fv9-4.failiem.lv/down.php?i=r4hz5tx4a&view">
+      <img src="https://fv9-7.failiem.lv/down.php?i=w54s5f2wr&view">
       <p>Diena:<br>
-☀️Diena būs mākoņaina, un tikai brīžiem uzspīdēs saule. Daudzviet, bet it sevišķi rietumu un centrālajos rajonos gaidāmas lokālas pērkona lietusgāzes, kas vietām var būt stipras, ar brāzmainu vēju, iespējama arī krusa.<br>
-🌡️Gaisa temperatūra rietumu rajonos būs ap +20°C...+25°C, taču centrālajos un austrumu rajonos turpināsies karstums - gaiss iekarsīs līdz +27°C...+29°C.<br>
-💨 Pūtīs lēns vējš ar ātrumu 3-5 m/s. Negaisa laikā brāzmas līdz 15-19 m/s.
+☀️Dienā pārsvarā saulains laiks, taču dienas laikā mākoņu kļūs vairāk, un vietām tie var atnest īslaicīgu lietu, pastāv arī pērkona negaisa iespējamība.<br>
+🌡Gaisa temperatūra rietumu rajonos būs ap +23°C...+26°C, taču centrālajos un austrumu rajonos gaidāms stiprs karstums - gaiss iekarsīs līdz +28°C...+31°C.<br>
+💨 Pūtīs lēns vējš ar ātrumu 3-5 m/s.
     </div>
 
     <script>
