--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -73,23 +73,36 @@
   <section class="MeteoLatvia_StormMap">
     <button class="collapsible">Nakts</button>
     <div class="thunderstorm-outlook-2">
-      <h1>Nakts</h1>
-      <img src="https://fv9-6.failiem.lv/down.php?i=p8pyftxz5&view">
+      <h1>Līgo diena</h1>
+      <img src="https://fv9-7.failiem.lv/down.php?i=sm29gxcr6&view">
+      <p>Diena:<br>
+🌿☀️Diena būs mākoņaina, un tikai brīžiem uzspīdēs saule, taču nokrišņi nav gaidāmi un lielākajā valsts daļā diena būs patīkami silta, vasarīga.<br>
+🌡Gaisa temperatūra paaugstināsies līdz +24°C...+26°C, vienīgi piekrastē par pāris grādiem vēsāks.<br>
+💨 Pūtīs lēns vējš ar ātrumu 2-5 m/s.
+
+    </div>
+
+
+      <section class="MeteoLatvia_StormMap">
+    <button class="collapsible">Nakts</button>
+    <div class="thunderstorm-outlook-2">
+      <h1>Jāņu nakts</h1>
+      <img src="https://fv9-6.failiem.lv/down.php?i=t4ujsbree&view">
       <p>Nakts:<br>
-🌒Neliels mākoņu daudzums, taču vietām atsevišķi gubu mākoņi var atnest īslaicīgu lietu.<br>
-🌡Gaisa temperatūra ap +14°C...+19°C.<br>
-💨Pūtīs lēns vējš ar ātrumu 1-3 m/s, taču daudzviet būs arī bezvējš
+🔥🌒Mainīgs mākoņu daudzums, arī naktī nokrišņi nav gaidāmi.<br>
+🌡Gaisa temperatūra būs robežās ap +13°C...+16°C, vietām austrumos ne vēsāks par +18°C.<br>
+💨 Pūtīs lēns vējš ar ātrumu 1-4 m/s.
 
     </div>
 
     <button class="collapsible">Diena</button>
     <div class="thunderstorm-outlook-2">
-      <h1>Diena</h1>
-      <img src="https://fv9-7.failiem.lv/down.php?i=w54s5f2wr&view">
+      <h1>Jāņu diena</h1>
+      <img src="https://fv9-4.failiem.lv/down.php?i=p2pm4pn6f&view">
       <p>Diena:<br>
-☀️Dienā pārsvarā saulains laiks, taču dienas laikā mākoņu kļūs vairāk, un vietām tie var atnest īslaicīgu lietu, pastāv arī pērkona negaisa iespējamība.<br>
-🌡Gaisa temperatūra rietumu rajonos būs ap +23°C...+26°C, taču centrālajos un austrumu rajonos gaidāms stiprs karstums - gaiss iekarsīs līdz +28°C...+31°C.<br>
-💨 Pūtīs lēns vējš ar ātrumu 3-5 m/s.
+☀️Mainīgs mākoņu daudzums, vietām nedaudz uzlīs, taču uzspīdēs arī saule.<br>
+🌡Gaisa temperatūra būs robežās ap +22°C...+26°C, vienīgi piekrastē vēsāks - ap +18°C...+20°C<br>
+💨 Pastiprināsies ziemeļu puses vējš, kas pēcpusdienā jau būs ar ātrumu 5-7 m/s, brāzmas līdz 10 m/s.
     </div>
 
     <script>
