--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -88,27 +88,26 @@
     }
   </style>
 
-  <p>Prognoze atjaunota: 12.06.2023. 18:00<br>
-    Prognoze derīga: 12.06.2023. 18:00 - 13.06.2023. 18:00</p>
+  <p>Prognoze atjaunota: 03.07.2023. 18:00<br>
+    Prognoze derīga: 03.07.2023. 18:00 - 04.07.2023. 18:00</p>
 
   <section class="MeteoLatvia_StormMap">
     <div class="image-container">
       <div>
         <h1>Nakts</h1>
-        <img src="https://fv9-7.failiem.lv/down.php?i=s6dwhd9r9&view">
+        <img src="https://fv9-2.failiem.lv/down.php?i=75qv4fse5&view">
         <p>Nakts:<br>
-          🌗Pārsvarā skaidrs, tikai dienvidos vairāk mākoņu.<br>
-          🌡Gaisa temperatūra ap +4°C...+9°C, piekrastē ne vēsāks par +10°C...+12°C<br>
-          💨Pūtīs lēns austrumu puses vējš ar ātrumu 1-2 m/s.</p>
+          🌕 Naktī mākoņu daudzums būs neliels, un tikai vietām valsts ziemeļu rajonos iespējams īslaicīgs lietus.<br>
+🌡 Gaisa temperatūra pazemināsies līdz +12°C...+16°C.<br>
+💨Pūtīs mērēni stiprs dienvdrietumu-dienvidu puses vējš ar ātrumu 5-9 m/s, piekrastē brāzmas līdz 16-20 m/s.
       </div>
       <div>
         <h1>Diena</h1>
-        <img src="https://fv9-4.failiem.lv/down.php?i=dfe9udbey&view">
+        <img src="https://fv9-6.failiem.lv/down.php?i=kshsxmpe4&view">
         <p>Diena:<br>
-          ☀ Dienas pirmajā pusē laiks būs skaidrs un saulains, bet dienas laikā no dienvidiem mākoņu daudzums
-          palielināsies, taču nokrišņi nav gaidāmi.<br>
-          🌡Gaisa temperatūra ap +23°C...+26°C, piekrastē vēsāks - ap +19°C...+20°C<br>
-          💨 Lēns līdz mēreni stiprs ziemeļu puses vējš ar ātrumu 2-5 m/s, piekrastes rajonos brāzmas līdz 8-10 m/s.</p>
+        ☀️Dienā mainīgs mākoņu daudzums, dienas laikā daudzviet gaidāms īslaīcīgs lietus, lokāli arī stiprs ar pērkonu ar krasām vēja brāzmām.<br>
+🌡Gaisa temperatūra paaugstināsies līdz +16°C...+21°C, savukārt dienvidaustrumu rajonos, kur diena būs saulaināka gaiss iesils līdz +22°C...+24°C.<br>
+💨Pūtīs mēreni stiprs dienvidrietumu-dienvidu puses vējš ar ātrumu 7-9 m/s, brāzmās rietumu un centrālajos rajonos, kā arī zem intensīviem nokrišņu mākoņiem līdz 16-22 m/s.
       </div>
     </div>
   </section>
