--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -67,17 +67,20 @@
     <h1>Laika prognoze</h1>
   </section>
 
-  <style>
+   <style>
     .image-container {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      /* Center the images horizontally */
+      gap: 20px;
+      /* Adjust the gap between images as needed */
     }
 
     .image-container img {
       width: 100%;
       height: auto;
       max-width: 100%;
-      max-height: 400px;
+      max-height: 550px;
       /* Adjust the height as needed */
     }
 
@@ -87,6 +90,7 @@
       /* Adjust the width as needed */
     }
   </style>
+
 
   <p>Prognoze atjaunota: 03.07.2023. 18:00<br>
     Prognoze derīga: 03.07.2023. 18:00 - 04.07.2023. 18:00</p>
@@ -98,16 +102,19 @@
         <img src="https://fv9-2.failiem.lv/down.php?i=75qv4fse5&view">
         <p>Nakts:<br>
           🌕 Naktī mākoņu daudzums būs neliels, un tikai vietām valsts ziemeļu rajonos iespējams īslaicīgs lietus.<br>
-🌡 Gaisa temperatūra pazemināsies līdz +12°C...+16°C.<br>
-💨Pūtīs mērēni stiprs dienvdrietumu-dienvidu puses vējš ar ātrumu 5-9 m/s, piekrastē brāzmas līdz 16-20 m/s.
+          🌡 Gaisa temperatūra pazemināsies līdz +12°C...+16°C.<br>
+          💨 Pūtīs mērēni stiprs dienvdrietumu-dienvidu puses vējš ar ātrumu 5-9 m/s, piekrastē brāzmas līdz 16-20 m/s.
       </div>
       <div>
         <h1>Diena</h1>
         <img src="https://fv9-6.failiem.lv/down.php?i=kshsxmpe4&view">
         <p>Diena:<br>
-        ☀️Dienā mainīgs mākoņu daudzums, dienas laikā daudzviet gaidāms īslaīcīgs lietus, lokāli arī stiprs ar pērkonu ar krasām vēja brāzmām.<br>
-🌡Gaisa temperatūra paaugstināsies līdz +16°C...+21°C, savukārt dienvidaustrumu rajonos, kur diena būs saulaināka gaiss iesils līdz +22°C...+24°C.<br>
-💨Pūtīs mēreni stiprs dienvidrietumu-dienvidu puses vējš ar ātrumu 7-9 m/s, brāzmās rietumu un centrālajos rajonos, kā arī zem intensīviem nokrišņu mākoņiem līdz 16-22 m/s.
+          ☀️ Dienā mainīgs mākoņu daudzums, dienas laikā daudzviet gaidāms īslaīcīgs lietus, lokāli arī stiprs ar
+          pērkonu ar krasām vēja brāzmām.<br>
+          🌡 Gaisa temperatūra paaugstināsies līdz +16°C...+21°C, savukārt dienvidaustrumu rajonos, kur diena būs
+          saulaināka gaiss iesils līdz +22°C...+24°C.<br>
+          💨 Pūtīs mēreni stiprs dienvidrietumu-dienvidu puses vējš ar ātrumu 7-9 m/s, brāzmās rietumu un centrālajos
+          rajonos, kā arī zem intensīviem nokrišņu mākoņiem līdz 16-22 m/s.
       </div>
     </div>
   </section>
