--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -92,29 +92,26 @@
   </style>
 
 
-  <p>Prognoze atjaunota: 03.07.2023. 18:00<br>
-    Prognoze derīga: 03.07.2023. 18:00 - 04.07.2023. 18:00</p>
+  <p>Prognoze atjaunota: 07.07.2023. 18:30<br>
+    Prognoze derīga: 07.07.2023. 18:00 - 08.07.2023. 18:00</p>
 
   <section class="MeteoLatvia_StormMap">
     <div class="image-container">
       <div>
         <h1>Nakts</h1>
-        <img src="https://fv9-2.failiem.lv/down.php?i=75qv4fse5&view">
+        <img src="https://fv9-5.failiem.lv/down.php?i=yqzkt87jd&view">
         <p>Nakts:<br>
-          🌕 Naktī mākoņu daudzums būs neliels, un tikai vietām valsts ziemeļu rajonos iespējams īslaicīgs lietus.<br>
-          🌡 Gaisa temperatūra pazemināsies līdz +12°C...+16°C.<br>
-          💨 Pūtīs mērēni stiprs dienvdrietumu-dienvidu puses vējš ar ātrumu 5-9 m/s, piekrastē brāzmas līdz 16-20 m/s.
+          🌖 Naktī mainīgs mākoņu daudzums, vietām valsts ziemeļu rajonos gaidāms neliels, īslaicīgs lietus.<br>
+🌡 Gaisa temperatūra pazemināsies līdz +10°C...+17°C.<br>
+💨Pūtīs lēns vējš ar ātrumu 4-5 m/s, piekrastē brāzmas līdz 8-10 m/s.
       </div>
       <div>
         <h1>Diena</h1>
-        <img src="https://fv9-6.failiem.lv/down.php?i=kshsxmpe4&view">
+        <img src="https://fv9-6.failiem.lv/down.php?i=gufz8wvj2&view">
         <p>Diena:<br>
-          ☀️ Dienā mainīgs mākoņu daudzums, dienas laikā daudzviet gaidāms īslaīcīgs lietus, lokāli arī stiprs ar
-          pērkonu ar krasām vēja brāzmām.<br>
-          🌡 Gaisa temperatūra paaugstināsies līdz +16°C...+21°C, savukārt dienvidaustrumu rajonos, kur diena būs
-          saulaināka gaiss iesils līdz +22°C...+24°C.<br>
-          💨 Pūtīs mēreni stiprs dienvidrietumu-dienvidu puses vējš ar ātrumu 7-9 m/s, brāzmās rietumu un centrālajos
-          rajonos, kā arī zem intensīviem nokrišņu mākoņiem līdz 16-22 m/s.
+         ☀️Dienā mainīgs mākoņu daudzums, vietām gaidāms īslaicīgs lietus, lokāli lietusgāzes kopā ar pērkonu.<br>
+🌡Gaisa temperatūra paaugstināsies līdz +18°C...+22°C.<br>
+💨Pūtīs lēns līdz mērens ziemeļrietumu puses vējš ar ātrumu 4-7 m/s. Brāzmās 10-12 m/s, negaisa laikā līdz 15-19 m/s.
       </div>
     </div>
   </section>
