--- a/MeteoPrognoze.html
+++ b/MeteoPrognoze.html
@@ -92,26 +92,26 @@
   </style>
 
 
-  <p>Prognoze atjaunota: 07.07.2023. 18:30<br>
+  <p>Prognoze atjaunota: 08.07.2023. 18:00<br>
     Prognoze derīga: 07.07.2023. 18:00 - 08.07.2023. 18:00</p>
 
   <section class="MeteoLatvia_StormMap">
     <div class="image-container">
       <div>
         <h1>Nakts</h1>
-        <img src="https://fv9-5.failiem.lv/down.php?i=yqzkt87jd&view">
+        <img src="https://fv9-4.failiem.lv/down.php?i=42zr4mrqs&view">
         <p>Nakts:<br>
-          🌖 Naktī mainīgs mākoņu daudzums, vietām valsts ziemeļu rajonos gaidāms neliels, īslaicīgs lietus.<br>
-🌡 Gaisa temperatūra pazemināsies līdz +10°C...+17°C.<br>
-💨Pūtīs lēns vējš ar ātrumu 4-5 m/s, piekrastē brāzmas līdz 8-10 m/s.
+          🌖 Naktī debesis būs pārsvarā skaidras, vienīgi ziemeļaustrumu rajonos vairāk mākoņu, tur arī iespējams īslaicīgs lietus.<br>
+🌡 Gaisa temperatūra pazemināsies līdz +12°C...+16°C.<br>
+💨Pūtīs lēns līdz mērens rietumu puses vējš ar ātrumu 2-6 m/s,brāzmas līdz 6-7 m/s.
       </div>
       <div>
         <h1>Diena</h1>
-        <img src="https://fv9-6.failiem.lv/down.php?i=gufz8wvj2&view">
+        <img src="https://fv9-5.failiem.lv/down.php?i=qtvfx68dh&view">
         <p>Diena:<br>
-         ☀️Dienā mainīgs mākoņu daudzums, vietām gaidāms īslaicīgs lietus, lokāli lietusgāzes kopā ar pērkonu.<br>
-🌡Gaisa temperatūra paaugstināsies līdz +18°C...+22°C.<br>
-💨Pūtīs lēns līdz mērens ziemeļrietumu puses vējš ar ātrumu 4-7 m/s. Brāzmās 10-12 m/s, negaisa laikā līdz 15-19 m/s.
+        ☀️Dienā mainīgs mākoņu daudzums, vietām gaidāms īslaicīgs lietus, lokāli arī stiprākas lietusgāzes kopā ar pērkona negaisu.<br>
+🌡Gaisa temperatūra paaugstināsies līdz +19°C...+23°C.<br>
+💨Pūtīs lēns līdz mērens ziemeļrietumu puses vējš ar ātrumu 3-6 m/s. Brāzmās 10-13 m/s, negaisa laikā līdz 15-19 m/s.
       </div>
     </div>
   </section>
